第28轮扩写：单元测试/JVM调优/Prometheus/环境配置密钥（4篇补齐至1000+行）